SnapdragonGallery: disable set APN when no SIM card
When no SIM card inserted, remove apn related preference

Change-Id: Ifd79b1018f4658acf1a9ff87c4762a84c131de0e
CRs-Fixed: 1066720

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -49,6 +49,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH" />
     <!-- add for guest to set system property -->
     <uses-permission android:name="android.permission.INTERACT_ACROSS_USERS" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <supports-screens android:smallScreens="false"
             android:normalScreens="true" android:largeScreens="true"
